2009-09-16  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added more methods for using an SQL database:
	  printer_exists_in_sql_db(), get_printers_for_driver_from_sql_db(),
	  get_drivers_for_printer_from_sql_db(), get_margins_from_sql_db(),
	  get_driver_packages_from_sql_db
	  Let overview and driver listing also include links to downloadable
	  packages and info about unprintable margins.
	  Do not create unneeded empty fields in the Perl data structures
	  when reading data sets from the SQL database.

2009-09-14  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added more methods for using an SQL database:
	  get_driverlist_from_sql_db(), get_printerlist_from_sql_db(),
	  get_printer_from_sql_db(), get_driver_from_sql_db(),
	  get_driver_support_contacts_from_sql_db().
	  Added helper function get_make_model_from_id().

2009-09-11  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added first methods for getting the data
	  from an SQL database instead of from an XML database:
	  connect_to_mysql_db(), disconnect_from_sql_db(),
	  get_overview_from_sql_db(), and helper function
	  read_conf_file(). It is checked whether valid database access
	  data is in the file mysql.conf in the default configuration
	  directory, and if so, the MySQL database is used.
	  Added also a DESTROY() method for Foomatic::DB which closes the
	  connection to the SQL database if one was used.

2009-08-19  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in: Added "-n" option to the foomatic-ppd-to-xml
	  utility. This makes only new printer XML files being generated and
	  no modified versions of existing files.

2009-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-preferred-driver.in: The "hpijs" driver entry got replaced
	  by "hplip".

	* lib/Foomatic/DB.pm: Add "hpijs-pcl5e" or "hpijs-pcl5c" or "hplip"
	  instead of "hpijs" to the driver list of the XML file of a PCL 5c/e